# Agriculture_Drone

./: README.md
drone/vla_ws/src/vlm_drone/: package.xml  setup.cfg  setup.py
drone/vla_ws/src/vlm_drone/launch/: camera.launch.py  px4_bridge.launch.py  vla_all.launch.py
drone/vla_ws/src/vlm_drone/script/: vla_start.sh
drone/vla_ws/src/vlm_drone/vlm_drone/: drone_node.py
drone/vla_ws/src/vlm_drone/vlm_drone/inference/: model.py  preprocess.py
