<?xml version="1.0"?>
<package format="3">
  <name>vlm_drone</name>
  <version>0.0.1</version>
  <description>VLA drone controller (PX4 ROS2 offboard)</description>

  <maintainer email="nuc@todo.todo">nuc</maintainer>
  <license>TODO</license>

  <!-- ament python build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <!-- These are pip/system libs; not required in package.xml usually,
       but keeping note here: numpy, requests, opencv-python -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
